# NOMOS

./: .coverage  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  conftest.py  pyproject.toml
.claude/agents/: nomos-executor.md  nomos-revisor.md
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: AUTOMACAO_PROPAGACAO.md  CAPACIDADES.json  CLAUDE_MEMORY_USAGE.md  CONECTORES_SOCIAIS.md  ERROS.md  EXTERNAL_MEMORY_REPO_AUDIT_MC28.md  INSTALL.md  MOTORES.md  NOMOS_MEMORY_ENGINE.md  NOMOS_MOSAIC.md  PRIVACIDADE.md  ROADMAP.md  ROADMAP_2.md  ROADMAP_3.md  ROADMAP_4.md  ROADMAP_MCP_CONEXOES.md  ROTEADOR.md  SKILLS.md  THREAT_MODEL.md  USUARIO_INICIANTE.md
docs/architecture/: MOTOR_COUNCIL_CHAT_DRY_RUN_SPEC_v1.md  MOTOR_COUNCIL_INDEX_v1.md  MOTOR_COUNCIL_SHARED_OUTPUT_REDACTION_SPEC_v1.md  MOTOR_COUNCIL_SPEC_v1.md  MOTOR_COUNCIL_UX_SPEC_v1.md  NOMOS_MOSAIC_ARQUITETURA_v1.md  NOMOS_MOSAIC_ESTUDO_CUSTOS_v1.md  mosaic_custos.py
docs/brand/: NOMOS_BRANDBOOK.md
docs/governance/: NOMOS_UPDATE_AGENT.md  SECURITY_POLICY.md
docs/installation/: NOMOS_INSTALLATION_MANUAL.md
docs/missions/: ARBITRAGEM_MOTORES.md  ARBITRAGEM_SPEC.md  AUDIT_LOG_HMAC_ANCHOR_v1.md  GITHUB_RELEASE_v1.2.0rc2_SECURITY_AUDITED.md  GITHUB_RELEASE_v1.2.0rc3_AUDIT_ANCHORED.md  GITHUB_RELEASE_v1.3.0rc4_MOTOR_COUNCIL_DRY_RUN.md  H3_MISSAO_DEBITOS_ADENDO_COBERTURA_ORCHESTRATOR_E_KNOWN_GAP.md  H3_MISSAO_DEBITOS_P3_VALIDACAO_BROWSER_REAL_TEMA_DASH.md  H3_MISSAO_DEBITOS_P4_CI_GATES_PYTHON312.md  H3_MISSAO_DEBITOS_RELATORIO_FINAL.md  MC24_FORBIDDEN_FLAGS_CONTRACT_RECONCILIATION.md  MC25_BRANDBOOK_INSTALL_LANDING_UPDATE_AGENT.md  MC25_IL100_FINAL_REPORT.md  MC25_IL100_SPEC.md  MC26_UPDATE_AGENT_CHECK_MODE.md  MC27_UPDATE_AGENT_CI_DIFF.md  MC28_REPO_CONSOLIDATION_LOCAL_DELIVERY.md  MC29_PLANO_7_IMPLEMENTACOES.md  MC35_NOMOS_LOOP_PRODUTO_SPEC.md  MC36_REVISAO_LOOP100_RELATORIO.md  MC37_DESDENSIFICACAO_TEMA_RELATORIO.md  MC43_RELEASE_PREP.md  (+48 more)
examples/mcp/: _comum.py
installer/: install.ps1  install.sh  rollback.sh  uninstall.ps1  uninstall.sh
loop/: BACKLOG.md  CONECTORES.md  LOOP_LOG.md  LOOP_PROMPT.md
site/: 404.html  README.md  index.html  preview.py
tests/: _cli_env.py  conftest.py  test_approvals.py  test_arbitragem.py  test_arquivos.py  test_atualizar.py  test_audit_consent.py  test_audit_hmac_anchor.py  test_briefing_slack.py  test_briefing_telegram.py  test_briefing_whatsapp.py  test_cerebro.py  test_chat_painel.py  test_chat_ux.py  test_chaves.py  test_cli.py  test_cloud_opt_in_regression.py  test_cobertura_docs.py  test_cognicao_v018.py  test_conectores_empacotados.py  test_config_home.py  test_council_audit_envelope.py  test_council_audit_envelope_security.py  test_council_local_adapter.py  test_council_local_adapter_security.py  test_council_local_engine.py  test_council_local_engine_security.py  test_council_local_harness.py  test_council_local_harness_security.py  test_council_local_provider.py  test_council_local_provider_security.py  test_council_model_security.py  test_council_models.py  test_council_policy_gate_dry_run.py  test_council_policy_gate_security.py  test_council_safe_output.py  test_council_simulator.py  test_council_simulator_security.py  test_doutor.py  test_doutor_v011.py  (+112 more)
tools/: bench_kdf.py  make_sbom.py  nomos_git_agent.py  nomos_update_agent.py  propagar.py
(+166 files in other folders)
